[tool.poetry]
name = "tweakers"
version = "0.4.0"
description = "A Python wrapper for tweakers.net"
authors = ["Timo"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/timotk/tweakers"

classifiers=[
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
requests-html = "^0.10.0"
dateparser = "^0.7.0"
tenacity = "^6.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"
black = "23.7.0"
pytest = "^4.0"
pytest-cov = "^2.6"
httpx = "^0.24.1"