[tool.poetry]
name = "tweakers"
version = "0.3.3"
description = "A Python wrapper for tweakers.net"
authors = ["Timo"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/timotk/tweakers"

classifiers=[
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7"
requests-html = "^0.10.0"
dateparser = "1.1.8"
tenacity = "^6.2.0"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.6"
black = "^19.10b0"
