[tool.poetry]
name = "tweakers"
version = "0.4.0"
description = "A Python wrapper for tweakers.net"
authors = ["Timo"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/timotk/tweakers"

classifiers=[
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
requests-html = "^0.10.0"
dateparser = "1.1.8"
tenacity = "^6.2.0"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "23.3.0"
