[metadata]
name = tweakers
url = https://github.com/timotk/tweakers
description = file: README.md
long_description = file: README.md
keywords = tweakers, api, scraper
licence_file = LICENSE
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = "3.6"
install_requires =
  dateparser
  requests-html
setup_requires =
  dateparser
  requests-html

[options.packages.find]
exclude =
  tests
